--- a/index.html
+++ b/index.html
@@ -6,7 +6,33 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body>  
+    <section id="main" >
+        <div class="main-block">
+
+        </div>
+    </section>
+    <section id="about" >
+        <div class="about-block">
+
+        </div>
+    </section>
+    <section id="skills" >
+        <div class="skills-block">
+
+        </div>
+    </section>
+    <section id="works" >
+        <div class="works-block">
+
+        </div>
+    </section>
+    <section id="comments" >
+        <div class="comments-block">
+
+        </div>
+    </section>
+    
     
     <script src="script.js"></script>
 </body>
