main section lesson 27

--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
 <body>  
     <section id="main" >
         <div class="main-block">
-
+            <img src="img/maskot.png" alt=""  width="125" >
+            <div class="main-content">
+                <h1 class="main-title">
+                    David Palchyk Gregorio
+                </h1>
+                <p class="main-subtitke">
+                    my own web site developer
+                </p>
+                
+            </div>
+            <div class="button">
+                <a href="#">More info</a>
+            </div>
+        </div>
+        <div class="moving-planet">
+            
         </div>
     </section>
     <section id="about" >
