--- a/index.html
+++ b/index.html
@@ -28,23 +28,91 @@
         </div>
     </section>
     <section id="about" >
+        <h1  class="title" >
+            About me 
+        </h1>
         <div class="about-block">
-
+            <div class="about-content" >
+                <div class="about-text" >
+                    <p class="about-title" >
+                        My name: David
+                        I am developing modern websites and applications <br> <br>
+                        I like to create interesting and modern projects 
+                    </p>
+                    <div  class="button">
+                        <a href="">My skills</a>
+                    </div>
+                </div>
+                <div class="about-card" >
+                    <img src="img/photo.png" alt="">
+                    <p>Where i live: Mar Del Plata</p>
+                    <p> My age: 12</p>
+                    <p> My birthday: 29 november</p>
+                </div>
+            </div>
         </div>
     </section>
     <section id="skills" >
+        <h1 class="title">
+            My skills
+        </h1>
         <div class="skills-block">
-
+            <div class="skills-card" >
+                <p>
+                    I did this site while i was studing in rocket tech school 
+                </p>
+                <div  class="languages">
+                    <img src="img/html.png" alt="" width="70">
+                    <img src="img/css.png" alt="" width="70">
+                    <img src="img/js.png" alt="" width="70">
+                </div>
+                <div class="button" >
+                    <a href="#">My projects</a>
+                </div>
+            </div>
         </div>
     </section>
     <section id="works" >
+        <h1  class="title">
+            My works
+        </h1>
         <div class="works-block">
+            <img src="img/work1.png" alt="">
+            <img src="img/work2.png" alt="">
+            <img src="img/work3.png" alt="">
 
         </div>
     </section>
     <section id="comments" >
+        <h1  class="title">
+            Comments
+        </h1>
         <div class="comments-block">
-
+            <div class="comments-card">
+                <img src="img/photo1.png" alt="">
+                <h3>
+                    Vladimir
+                </h3>
+                <p>Founder Rocket Tech School</p>
+            </div>
+            <div class="comment">
+                <p>
+                    This boy worked just 4 months and already make complicated web sites!
+                </p>
+                <div class="comments-card">
+                    <img src="img/photo2.png" alt="">
+                    <h3>
+                        Diana
+                    </h3>
+                    <p>Product TL RTS</p>
+                </div>
+                <div class="comment">
+                    <p>
+                        Writes clean code. Well optimized web-sites
+                        They are looking awesome!
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
     
