--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>  
+    <nav>
+        <div class="fixed-menu">
+            <h1  class="logo">DP</h1>
+            <div class="nav-links">
+                <a  class="nav-link" href="#main">Main</a>
+                <a class="nav-link" href="#about">About</a>
+                <a class="nav-link" href="#skills">Skills</a>
+                <a class="nav-link" href="#works">Works</a>
+                <a class="nav-link" href="#comments">Comments</a>
+            </div>
+        </div>
+    </nav>
     <section id="main" >
         <div class="main-block">
             <img src="img/maskot.png" alt=""  width="125" >
@@ -44,7 +56,7 @@
                     </div>
                 </div>
                 <div class="about-card" >
-                    <img src="img/photo.png" alt="">
+                    <img src="img/8179eb2a-7f2c-4121-bbdf-ee2de29aba2b.jpg" alt="">
                     <p>Where i live: Mar Del Plata</p>
                     <p> My age: 12</p>
                     <p> My birthday: 29 november</p>
@@ -102,6 +114,7 @@
                 <p>
                     This boy worked just 4 months and already make complicated web sites!
                 </p>
+            </div>
                 <div class="comments-card">
                     <img src="img/photo2.png" alt="">
                     <h3>
@@ -115,18 +128,21 @@
                         They are looking awesome!
                     </p>
                 </div>
-            </div>
         </div>
 
     </section>
     <footer class="footer">
-<p  class="David">David Palchyk
-my web site developer site</p>
-<img src="img/discord.svg" alt=""  class="footer-img">
-<img src="img/facebook.svg" alt="" class="footer-img">
-<img src="img/telegram.svg" alt="" class="footer-img">
-<img src="img/instagram.svg" alt="" class="footer-img">
-    &copy; <p>2024</p>
+        <div class="main-footer" >
+            <p  class="David">David Palchyk
+                my web site developer site</p>
+                <div class="copyright" >
+                    &copy; <p>2024</p>
+                </div>
+                <img src="img/discord.svg" alt=""  class="footer-img">
+                <img src="img/facebook.svg" alt="" class="footer-img">
+                <img src="img/telegram.svg" alt="" class="footer-img">
+                <img src="img/instagram.svg" alt="" class="footer-img">
+        </div>
     </footer>
     <script src="script.js"></script>
     
