--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <div class="fixed-menu">
             <h1  class="logo">DP</h1>
             <div class="nav-links">
-                <a  class="nav-link" href="#main">Main</a>
-                <a class="nav-link" href="#about">About</a>
-                <a class="nav-link" href="#skills">Skills</a>
-                <a class="nav-link" href="#works">Works</a>
-                <a class="nav-link" href="#comments">Comments</a>
+                <a  class="nav-link main-link active " href="#main">Main</a>
+                <a class="nav-link  about-link" href="#about">About</a>
+                <a class="nav-link  skills-link" href="#skills">Skills</a>
+                <a class="nav-link  works-link" href="#works">Works</a>
+                <a class="nav-link  comments-link " href="#comments">Comments</a>
             </div>
         </div>
     </nav>
