--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
                 <a class="nav-link  works-link" href="#works">Works</a>
                 <a class="nav-link  comments-link " href="#comments">Comments</a>
             </div>
+            <div class="mobile-button">
+                <img src="img/mobile_menu.png" width="40" alt="">
+            </div>
+            <div class="mobile-menu hide" >
+                <div class="mobile-nav-links">
+                <a  class="nav-link main-link " href="#main">Main</a>
+                <a class="nav-link  about-link" href="#about">About</a>
+                <a class="nav-link  skills-link" href="#skills">Skills</a>
+                <a class="nav-link  works-link" href="#works">Works</a>
+                <a class="nav-link  comments-link " href="#comments">Comments</a>
+                </div>
+            </div>
         </div>
     </nav>
     <section id="main" >
@@ -32,7 +44,7 @@
                 
             </div>
             <div class="button">
-                <a href="#">More info</a>
+                <a href="#about">More info</a>
             </div>
         </div>
         <div class="moving-planet">
@@ -52,7 +64,7 @@
                         I like to create interesting and modern projects 
                     </p>
                     <div  class="button">
-                        <a href="">My skills</a>
+                        <a href="#skills">My skills</a>
                     </div>
                 </div>
                 <div class="about-card" >
@@ -79,7 +91,7 @@
                     <img src="img/js.png" alt="" width="70">
                 </div>
                 <div class="button" >
-                    <a href="#">My projects</a>
+                    <a href="#works">My projects</a>
                 </div>
             </div>
         </div>
