--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <a class="nav-link  comments-link " href="#comments">Comments</a>
             </div>
             <div class="mobile-button">
-                <img src="img/mobile_menu.png" width="40" alt="">
+                <img src="img/mobile_menu.png" class="mobile-img" width="40" alt="">
             </div>
-            <div class="mobile-menu hide" >
+            <div class='hide mobile-menu' >
                 <div class="mobile-nav-links">
                 <a  class="nav-link main-link " href="#main">Main</a>
                 <a class="nav-link  about-link" href="#about">About</a>
